# sctools

./: .gitignore  LICENSE  README.md  pyproject.toml
sctools/: __init__.py  annotate.py  effects.py  integrate.py  io.py  qc.py  score.py
sctools/plot/: __init__.py  effect.py  evaluate.py  integrate.py  misc.py  qc.py
