# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sctools"
version = "1.0.1"
description = "Python package for making large scale scRNAseq analysis a bit easier"
readme = "README.md"
authors = [{ name = "Daniel Malzl", email = "daniel@menchelab.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['bioinformatics', 'single-cell RNA-seq', 'scRNA-seq', 'sequencing', 'NGS']
dependencies = [
    'anndata >= 0.10.3',
    'matplotlib >= 3.8.2',
    'numpy >= 1.24.3',
    'pandas >= 1.5.3',
    'scanpy >= 1.9.6',
    'scikit-learn >= 1.5.2',
    'scipy >= 1.11.4',
    'scvi-tools >= 0.15.4',
    'seaborn >= 0.11.2',
    'statsmodels >= 0.14.3',
    'tokenizers == 0.21.1,
    'regex == 2024.11.6',
#     'doubletdetection >= 4.2'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/menchelab/sctools"
